# AI-Reasoning-Lab

./: .env.example  .gitignore  BASE_LOGIC_BENCHMARK_REPORT.md  BENCHMARK_REPORT.md  DOCKER_INSTALL.md  JUDGE_LEADERBOARD.md  LEADERBOARD.md  LICENSE.md  LogicPuzzleGenerator.py  NOTICE.md  NO_DOCKER_SETUP.md  ORToolsPuzzleGenerator.py  PRODUCTION_DEPLOYMENT.md  QUICKSTART_WEB.md  README.md  README_NO_DOCKER.md  START_SCRIPTS_README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  history.md  main_no_docker.py  pyproject.toml  readme.md  requirements.txt  run.bat  run.py  run.sh  run_web.py  run_web_no_docker.py  start-no-docker.bat  start-no-docker.py  start-no-docker.sh  start-web.bat  start-web.py  start-web.sh  test_extended_metrics.py  test_new_tests.py
baselogic/: debug_sandbox.py
baselogic/core/: AdapterLLMClient.py  GeminiClient.py  adapter.py  advanced_reporter.py  base_client.py  client_factory.py  config_loader.py  config_validator.py  enhanced_validator.py  enums.py  http_client.py  interfaces.py  judge_reporter.py  jvm_runner.py  llm_client.py  logger.py  metrics.py  ollama_client.py  openai_client.py  plugin_manager.py  progress_tracker.py  report_formatter.py  reporter.py  run_clients.py  safe_evaluator.py  semantic_analyzer.py  system_checker.py  test_runner.py  types.py
baselogic/tests/: abstract_test_generator.py  expert_calibration_dataset.py  t01_simple_logic.py  t02_instructions.py  t03_code_gen.py  t04_data_extraction.py  t05_summarization.py  t06_mathematics.py  t07_accuracy_ideal.py  t08_accuracy_flawed.py  t09_verbosity_ideal.py  t10_verbosity_bias.py  t10_verbosity_verbose.py  t11_positional_bias.py  t11_positional_first.py  t12_positional_second.py  t13_grandmaster_judge_evaluator.py  t14_image_recognition.py  t15_multi_hop_reasoning.py  t16_counterfactual_reasoning.py  t17_proof_verification.py  t18_constrained_optimization.py  test_generators.py  test_safe_evaluator.py
coder/: SlidingWindowLimiter.py  arch_test.py  evaluate_results.py  moon.py  moon_demo.py  parse_and_test.py  system_check.py  test_dp.py  test_judge.py  test_kv.py  test_logic.py  test_module_5.py  test_parser.py  test_sim.py
docs/: BASE_CONTROL_SPECIFICATION.md  FINAL_SPECIFICATION.md  GLOBAL_SPECIFICATION.MD  LLM-HARDWARE-RESEARCH_SPEC.md  LLM_JUDGE_SPECIFICATION.md  PROJECT_ANALYSE.md  comprehensive_improvement_plan.md  grandmaster_ling_generator_spec.md  tests_extends.md  validation_algorithms_documentation.md  validation_architecture_audit.md  web_interface_spec.md
grandmaster/: README.md
grandmaster/puzzles/: 4x4.txt  4x4_solution.txt  8x8_expert.txt
grandmaster/src/: CoreGenerator.py  LinguisticEngine.py  SettingGenerator.py  archetypes.json  clue_types.py  generate_settings.py  linguistics.json  main.py  populate_themes.py  themes.json
monitoring/: prometheus.yml
results/: history.json  report_desktop_mac_20250829_160958.md  report_desktop_mac_20250829_161306.md  report_desktop_mac_20250829_161847.md
results/raw/: Jan-v1-4B_20250819_114509.json  Jan-v1-4B_20250819_115142.json  Jan-v1-4B_20250819_115623.json  Jan-v1-4B_20250819_120209.json  Jan-v1-4B_20250819_140656.json  Jan-v1-4B_20250819_140740.json  Jan-v1-4B_20250819_140858.json  Qwen3-4B-Thinking-2507-Q4_K_M_20250819_144223.json  arcee-ai_trinity-large-preview_free_entry_level_20260313_090541.json  crow-9b-opus-4.6-distill-heretic_qwen3.5_entry_level_20260317_120519.json  deepseek-coder-v2-lite-instruct_entry_level_20250829_233149.json  deepseek_deepseek-chat-v3-0324_free_20250813_121801.json  deepseek_deepseek-chat-v3-0324_free_20250815_115825.json  deepseek_deepseek-r1-0528-qwen3-8b_20250815_103022.json  deepseek_deepseek-r1-0528-qwen3-8b_20250815_103349.json  deepseek_deepseek-r1-0528-qwen3-8b_20250815_115603.json  deepseek_deepseek-r1-0528-qwen3-8b_20250822_005326.json  deepseek_deepseek-r1-0528-qwen3-8b_20250822_084230.json  deepseek_deepseek-r1-0528-qwen3-8b_20250822_091244.json  deepseek_deepseek-r1-0528-qwen3-8b_20250822_092333.json  deepseek_deepseek-r1-0528-qwen3-8b_20250822_092940.json  deepseek_deepseek-r1-0528-qwen3-8b_entry_level_20250829_223934.json  deepseek_deepseek-r1-0528-qwen3-8b_free_20250813_122037.json  deepseek_deepseek-r1-0528-qwen3-8b_free_20250813_123133.json  deepseek_deepseek-r1_free_20250815_140039.json  driaforall.mem-agent_entry_level_20250916_144513.json  gemini-2.5-flash-lite_20250818_171816.json  gemini-2.5-flash_20250815_110622.json  gemini-2.5-flash_20250815_115139.json  gemma-4-26b-a4b-it-claude-opus-distill_mid_range_20260415_202427.json  gemma-4-26b-a4b-it-claude-opus-distill_mid_range_20260415_203623.json  gemma-4-26b-a4b-it_mid_range_20260415_195713.json  gemma-4-26b-a4b-it_mid_range_20260415_223028.json  gemma-4-31B-it-UD-IQ3_XXS_mid_range_20260416_094059.json  gemma3_4b_20250815_112808.json  gemma3_4b_20250815_113324.json  (+135 more)
scripts/: advanced_lms_benchmark.py  bench.py  config.py  connection_manager.py  create_model.py  gguf_to_ollama_creator.py  hf_best_models.py  hf_model_explorer.py  index.html  llm_benchmark_viewer.py  ollama_env_optimizer.py  regenerate_reports.py  run_baselogic_benchmark.py  run_grandmaster_benchmark.py  run_hf_explorer.py
src/: CoreGenerator.py  EinsteinPuzzle.py  LogicPuzzleGenerator.py  ORToolsPuzzleGenerator.py  PuzzleDefinition.py  ThemeGenerator.py  VerifiableLogicPuzzleGenerator.py  clue_types.py  main.py  themes.json
static/: index.html
tests/: linguistics.json  mock_archetypes.json  test_setting_generator.py  test_web_integration.py  themes.json
web/: model_history.json
web/backend/: Dockerfile  Dockerfile.prod  pyproject.toml
web/backend/app/: main.py
web/backend/app/core/: config.py
web/backend/app/models/: __init__.py  grandmaster.py  profile.py  session.py  test.py  user.py
web/backend/app/routers/: config.py  grandmaster.py  models.py  results.py  sessions.py  tests.py
web/backend/app/services/: analytics_service.py  grandmaster_service.py  model_discovery.py  model_history_service.py  profile_service.py  test_discovery.py  test_execution.py
web/backend/tests/: test_api_integration.py
(+46 files in other folders)
