[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-Reasoning-Lab"
version = "0.1.0"
description = "Grandmaster AI Logical Tests Generator + BaseLogic Core Library"
readme = "README.md"
authors = [
    { name = "arny", email = "arnyigor@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "ollama>=0.5.3",
    "PyYAML>=6.0",
    "requests>=2.25.0",
    "tabulate>=0.9.0",
    "pymorphy2>=0.9.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "psutil>=5.8.0",
    "Levenshtein>=0.27.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[project.urls]
Homepage = "https://github.com/arnyigor/AI-Reasoning-Lab"
Documentation = "https://github.com/arnyigor/AI-Reasoning-Lab/blob/master/README.md"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["grandmaster*", "baselogic*"]
