[tool.poetry]
name = "ai-reasoning-lab-web-backend"
version = "0.1.0"
description = "Backend for AI-Reasoning-Lab Web Interface"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
websockets = "^12.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
celery = "^5.3.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"